--- a/index.html
+++ b/index.html
@@ -1,121 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AD PRISM Portfolio</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, #004d29, #0a7a59);
+      background: linear-gradient(to bottom right, #006838, #10B981);
       color: white;
       text-align: center;
     }
     header {
       padding: 20px;
+      position: relative;
     }
     .logo {
       max-width: 150px;
-      margin-top: 20px;
+      margin-top: 10px;
     }
     .profile-pic {
-      width: 180px;
-      height: 180px;
-      object-fit: cover;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       border: 4px solid white;
-      margin-top: 20px;
+      margin-top: 10px;
+      object-fit: cover;
     }
     h1 {
+      margin-top: 10px;
       font-size: 2.5rem;
-      margin: 20px 0 10px;
     }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-    }
-    .services {
+    .stats {
       display: flex;
-      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      font-size: 1.1rem;
+      margin: 20px 0 40px;
+      font-weight: bold;
+    }
+    .stats div {
+      background: rgba(255, 255, 255, 0.15);
+      padding: 15px 25px;
+      border-radius: 12px;
+      min-width: 140px;
+    }
+    .section-title {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      font-weight: 600;
+    }
+    .photos, .videos {
+      display: flex;
       justify-content: center;
       gap: 15px;
+      flex-wrap: wrap;
+      margin-bottom: 40px;
+    }
+    .photos img, .video-thumb {
+      width: 30%;
+      max-width: 300px;
+      border-radius: 12px;
+      cursor: pointer;
+      box-shadow: 0 0 12px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease;
+      position: relative;
+      display: block;
+    }
+    .photos img:hover, .video-thumb:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #10B981;
+    }
+    .video-thumb {
+      position: relative;
+      background: #000;
+      color: white;
+      overflow: hidden;
+    }
+    .video-thumb::before {
+      content: "▶";
+      font-size: 50px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0.7;
+      pointer-events: none;
+    }
+    .btn-container {
+      text-align: center;
       margin-bottom: 50px;
     }
-    .service {
-      background: rgba(255,255,255,0.1);
-      padding: 15px 25px;
-      border-radius: 25px;
-      font-size: 1rem;
-    }
-    /* Gallery */
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      margin: 40px auto;
-      max-width: 900px;
-    }
-    .gallery img {
-      width: 250px;
-      height: 160px;
-      object-fit: cover;
-      border-radius: 10px;
+    .btn {
+      background: rgba(255, 255, 255, 0.2);
+      border: 2px solid white;
+      color: white;
+      font-weight: 600;
+      padding: 12px 30px;
+      border-radius: 30px;
       cursor: pointer;
-      border: 2px solid white;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
+      margin: 0 15px;
     }
-    /* Video Section */
-    .videos {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin: 40px auto;
-      max-width: 900px;
+    .btn:hover {
+      background-color: #10B981;
+      border-color: #10B981;
+      color: #fff;
     }
-    video {
-      width: 300px;
-      border-radius: 10px;
-      border: 2px solid white;
+    footer {
+      padding: 30px 10px;
+      background: #004d29;
+      font-size: 1rem;
+      color: white;
+    }
+    .contact-links a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .contact-links a:hover {
+      color: #10B981;
+    }
+    .scroll-down {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 32px;
+      cursor: pointer;
+      animation: bounce 2s infinite;
+      color: white;
+    }
+    @keyframes bounce {
+      0%,20%,50%,80%,100% {transform: translateX(-50%) translateY(0);}
+      40% {transform: translateX(-50%) translateY(-10px);}
+      60% {transform: translateX(-50%) translateY(-5px);}
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="images/AD-PRISM-04.png" alt="AD PRISM Logo" class="logo">
-    <img src="images/profile.png" alt="Profile Picture" class="profile-pic">
-    <h1>AD PRISM</h1>
-  
-  </header>
 
-  <section class="services">
-    <div class="service">Photography</div>
-    <div class="service">Filmmaking</div>
-    <div class="service">Documentary</div>
-    <div class="service">Motion Graphics</div>
-    <div class="service">Cinematography</div>
-    <div class="service">Headshots</div>
-    <div class="service">Interviews</div>
-  </section>
+<header>
+  <img src="images/AD-PRISM-04.png" alt="AD PRISM Logo" class="logo" />
+  <img src="images/profile.png" alt="Profile Picture" class="profile-pic" />
+  <h1>AD PRISM</h1>
 
-  <h2>📸 Photo Gallery</h2>
-  <section class="gallery">
-    <img src="images/gallery1.jpg" alt="Gallery Image 1">
-    <img src="images/gallery2.jpg" alt="Gallery Image 2">
-    <img src="images/gallery3.jpg" alt="Gallery Image 3">
-  </section>
+  <div class="stats">
+    <div>10+ Years Experience</div>
+    <div>50+ Projects Done</div>
+    <div>100+ Happy Clients</div>
+  </div>
 
-  <h2>🎬 Video Showcase</h2>
-  <section class="videos">
-    <video controls>
-      <source src="videos/sample1.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <video controls>
-      <source src="videos/sample2.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </section>
+  <div class="scroll-down" onclick="document.getElementById('photos-section').scrollIntoView({behavior:'smooth'});">&#x25BC;</div>
+</header>
+
+<section id="photos-section">
+  <h2 class="section-title">Featured Photos</h2>
+  <div class="photos">
+    <img src="images/photo1.jpg" alt="Photo 1" onclick="location.href='photos.html';" />
+    <img src="images/photo2.jpg" alt="Photo 2" onclick="location.href='photos.html';" />
+    <img src="images/photo3.jpg" alt="Photo 3" onclick="location.href='photos.html';" />
+  </div>
+  <div class="btn-container">
+    <a href="photos.html" class="btn">View More Photos</a>
+  </div>
+</section>
+
+<section id="videos-section">
+  <h2 class="section-title">Featured Videos</h2>
+  <div class="videos">
+    <a href="videos.html" class="video-thumb" style="background-image:url('images/video1-thumb.jpg'); background-size:cover;" aria-label="Watch Video 1"></a>
+    <a href="videos.html" class="video-thumb" style="background-image:url('images/video2-thumb.jpg'); background-size:cover;" aria-label="Watch Video 2"></a>
+  </div>
+  <div class="btn-container">
+    <a href="videos.html" class="btn">View More Videos</a>
+  </div>
+</section>
+
+<footer>
+  <div>Contact us:</div>
+  <div class="contact-links">
+    <a href="https://wa.me/923452592084" target="_blank" rel="noopener">WhatsApp +92 345 25 92084</a>
+    <a href="tel:+923452592084">Call +92 345 25 92084</a>
+  </div>
+</footer>
+
 </body>
 </html>
