--- a/photos.html
+++ b/photos.html
@@ -29,6 +29,22 @@
   <a href="#img4"><img src="images/extra1.jpg" alt="Photo 4" /></a>
   <a href="#img5"><img src="images/extra2.jpg" alt="Photo 5" /></a>
   <a href="#img6"><img src="images/extra3.jpg" alt="Photo 6" /></a>
+   <a href="#img4"><img src="images/extra4.jpg" alt="Photo 7" /></a>
+  <a href="#img5"><img src="images/extra5.jpg" alt="Photo 8" /></a>
+  <a href="#img6"><img src="images/extra6.jpg" alt="Photo 9" /></a>
+  <a href="#img4"><img src="images/extra7.jpg" alt="Photo 10" /></a>
+  <a href="#img5"><img src="images/extra8.jpg" alt="Photo 11" /></a>
+  <a href="#img6"><img src="images/extra9.jpg" alt="Photo 12" /></a>
+    <a href="#img4"><img src="images/extra10.jpg" alt="Photo 13" /></a>
+   <a href="#img4"><img src="images/extra11.jpg" alt="Photo 14" /></a>
+  <a href="#img5"><img src="images/extra12.jpg" alt="Photo 15" /></a>
+  <a href="#img6"><img src="images/extra13.jpg" alt="Photo 16" /></a>
+   <a href="#img4"><img src="images/extra14.jpg" alt="Photo 17" /></a>
+  <a href="#img5"><img src="images/extra15.jpg" alt="Photo 18" /></a>
+  <a href="#img6"><img src="images/extra16.jpg" alt="Photo 19" /></a>
+  <a href="#img4"><img src="images/extra17.jpg" alt="Photo 20" /></a>
+  <a href="#img5"><img src="images/extra18.jpg" alt="Photo 21" /></a>
+  <a href="#img6"><img src="images/extra19.jpg" alt="Photo 22" /></a>
 </div>
 
 <div id="lightbox" onclick="location.hash=''">
