--- a/index.html
+++ b/index.html
@@ -145,6 +145,25 @@
 <body>
 
 <header>
+
+  <img src="images/profile.png" alt="Profile Picture" class="profile-pic">
+<img 
+  src="https://drive.google.com/uc?export=view&id=1UXT4KLWwC_OH3iexo-C_d7ES16N4EHhf" 
+  alt="Profile Picture" 
+  class="profile-pic" />
+
+  <!-- Before: local file -->
+<img src="images/profile.png" alt="Profile" class="profile-pic">
+
+<!-- After: Drive-hosted image -->
+<img
+  src="https://drive.google.com/uc?export=view&id=1aBcDeFGhIjKlMnOpQRaStUvWyZ"
+  alt="Profile"
+  class="profile-pic"
+/>
+
+  
+  
   <img src="images/AD-PRISM-04.png" alt="AD PRISM Logo" class="logo" />
   <img src="images/profile.png" alt="Profile Picture" class="profile-pic" />
   <h1>AD PRISM</h1>
